# job-hunter-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: improvement-plan.md  notion-setup.md
scripts/: e2e_llm.py
src/: collector.py  config.py  dedup.py  enricher.py  main.py  models.py  notifier.py  researcher.py  scorer.py
src/collectors/: gupy.py  inhire.py  jobspy.py
src/llm/: __init__.py  anthropic.py  client.py  fallback.py  ollama.py
systemd/: job-hunter.service  job-hunter.timer
tests/: test_collector.py  test_config.py  test_dedup.py  test_enricher.py  test_llm_fallback.py  test_notifier.py  test_researcher.py  test_scorer.py
tests/collectors/: test_gupy.py  test_inhire.py  test_jobspy.py
