[project]
name = "job-hunter-bot"
version = "0.1.0"
description = "Job aggregator with local AI enrichment"
requires-python = ">=3.12"
dependencies = [
    "notion-client>=2.3.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
