[project]
name = "job-hunter-bot"
version = "0.1.0"
description = "Job aggregator with local AI enrichment"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.112.0",
    "ddgs>=9.14.4",
    "httpx>=0.28.0",
    "notion-client>=2.3.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-jobspy>=1.1.80",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
